SRC_CONTROL_WRAPPERS_DIR = src/Control/Wrappers
MSQ_INCLUDES += -I$(top_srcdir)/$(SRC_CONTROL_WRAPPERS_DIR)

MSQ_SRCS += \
	$(SRC_CONTROL_WRAPPERS_DIR)/ShapeImprovementWrapper.cpp 

MSQ_HDRS += \
	$(SRC_CONTROL_WRAPPERS_DIR)/LaplacianIQ.hpp \
	$(SRC_CONTROL_WRAPPERS_DIR)/ShapeImprovementWrapper.hpp 

