SRC_CONTROL_WRAPPERS_DIR = src/Control/Wrappers
MSQ_INCLUDES += -I$(top_srcdir)/$(SRC_CONTROL_WRAPPERS_DIR)
INCLUDED_MAKEFILES += $(SRC_CONTROL_WRAPPERS_DIR)/Makefile.am

MSQ_SRCS += \
	$(SRC_CONTROL_WRAPPERS_DIR)/ShapeImprovementWrapper.cpp \
	$(SRC_CONTROL_WRAPPERS_DIR)/ParallelShapeImprovementWrapper.cpp \
	$(SRC_CONTROL_WRAPPERS_DIR)/PaverMinEdgeLengthWrapper.cpp \
	$(SRC_CONTROL_WRAPPERS_DIR)/ViscousCFDTetShapeWrapper.cpp

MSQ_HDRS += \
	$(SRC_CONTROL_WRAPPERS_DIR)/LaplacianIQ.hpp \
	$(SRC_CONTROL_WRAPPERS_DIR)/ShapeImprovementWrapper.hpp \
	$(SRC_CONTROL_WRAPPERS_DIR)/ParallelShapeImprovementWrapper.hpp \
	$(SRC_CONTROL_WRAPPERS_DIR)/PaverMinEdgeLengthWrapper.hpp \
	$(SRC_CONTROL_WRAPPERS_DIR)/ViscousCFDTetShapeWrapper.hpp 
