SRC_QUALITYIMPROVER_TOPOLOGYMODIFIER_DIR = src/QualityImprover/TopologyModifier
MSQ_INCLUDES += -I$(top_srcdir)/$(SRC_QUALITYIMPROVER_TOPOLOGYMODIFIER_DIR)

MSQ_SRCS += \
	$(SRC_QUALITYIMPROVER_TOPOLOGYMODIFIER_DIR)/TopologyModifier.cpp 

MSQ_HDRS += \
	$(SRC_QUALITYIMPROVER_TOPOLOGYMODIFIER_DIR)/TopologyModifier.hpp 

