SRC_QUALITYMETRIC_DFT_DIR = src/QualityMetric/DFT
MSQ_INCLUDES += -I$(top_srcdir)/$(SRC_QUALITYMETRIC_DFT_DIR)
INCLUDED_MAKEFILES += $(SRC_QUALITYMETRIC_DFT_DIR)/Makefile.am

MSQ_SRCS += \
	$(SRC_QUALITYMETRIC_DFT_DIR)/DistanceFromTarget.cpp \
	$(SRC_QUALITYMETRIC_DFT_DIR)/I_DFT.cpp \
	$(SRC_QUALITYMETRIC_DFT_DIR)/RI_DFT.cpp \
	$(SRC_QUALITYMETRIC_DFT_DIR)/sI_DFT.cpp \
	$(SRC_QUALITYMETRIC_DFT_DIR)/sRI_DFT.cpp 

MSQ_HDRS += \
	$(SRC_QUALITYMETRIC_DFT_DIR)/DistanceFromTarget.hpp \
	$(SRC_QUALITYMETRIC_DFT_DIR)/I_DFT.hpp \
	$(SRC_QUALITYMETRIC_DFT_DIR)/I_DFTFamilyFunctions.hpp \
	$(SRC_QUALITYMETRIC_DFT_DIR)/I_DFT_Generalized.hpp \
	$(SRC_QUALITYMETRIC_DFT_DIR)/I_DFT_InverseMeanRatio.hpp \
	$(SRC_QUALITYMETRIC_DFT_DIR)/I_DFT_NoBarrier.hpp \
	$(SRC_QUALITYMETRIC_DFT_DIR)/I_DFT_StrongBarrier.hpp \
	$(SRC_QUALITYMETRIC_DFT_DIR)/I_DFT_WeakBarrier.hpp \
	$(SRC_QUALITYMETRIC_DFT_DIR)/RI_DFT.hpp \
	$(SRC_QUALITYMETRIC_DFT_DIR)/sI_DFT.hpp \
	$(SRC_QUALITYMETRIC_DFT_DIR)/sRI_DFT.hpp 

