SRC_QUALITYMETRIC_JACOBIAN_DIR = src/QualityMetric/Jacobian
MSQ_INCLUDES += -I$(top_srcdir)/$(SRC_QUALITYMETRIC_JACOBIAN_DIR)
INCLUDED_MAKEFILES += $(SRC_QUALITYMETRIC_JACOBIAN_DIR)/Makefile.am

MSQ_SRCS += $(SRC_QUALITYMETRIC_JACOBIAN_DIR)/JacobianMetric.cpp \
            $(SRC_QUALITYMETRIC_JACOBIAN_DIR)/AffineMapMetric.cpp \
            $(SRC_QUALITYMETRIC_JACOBIAN_DIR)/TargetMetricUtil.cpp \
            $(SRC_QUALITYMETRIC_JACOBIAN_DIR)/TargetMetricUtil.hpp 

MSQ_HDRS += $(SRC_QUALITYMETRIC_JACOBIAN_DIR)/JacobianMetric.hpp \
            $(SRC_QUALITYMETRIC_JACOBIAN_DIR)/AffineMapMetric.hpp

