SRC_TARGETMETRIC_ABSOLUTE_DIR = src/TargetMetric/Absolute
MSQ_INCLUDES += -I$(top_srcdir)/$(SRC_TARGETMETRIC_ABSOLUTE_DIR)
INCLUDED_MAKEFILES += $(SRC_TARGETMETRIC_ABSOLUTE_DIR)/Makefile.am

MSQ_SRCS += $(SRC_TARGETMETRIC_ABSOLUTE_DIR)/Target2DShapeSizeOrientAlt1.cpp \
            $(SRC_TARGETMETRIC_ABSOLUTE_DIR)/Target3DShapeSizeOrientAlt1.cpp

MSQ_HDRS += $(SRC_TARGETMETRIC_ABSOLUTE_DIR)/Target2DShapeSizeOrientAlt1.hpp \
            $(SRC_TARGETMETRIC_ABSOLUTE_DIR)/Target3DShapeSizeOrientAlt1.hpp
