SRC_TARGETMETRIC_MISC_DIR = src/TargetMetric/Misc
MSQ_INCLUDES += -I$(top_srcdir)/$(SRC_TARGETMETRIC_MISC_DIR)
INCLUDED_MAKEFILES += $(SRC_TARGETMETRIC_MISC_DIR)/Makefile.am

MSQ_SRCS += $(SRC_TARGETMETRIC_MISC_DIR)/InvTransBarrier.cpp \
	    $(SRC_TARGETMETRIC_MISC_DIR)/TOffset.cpp \
	    $(SRC_TARGETMETRIC_MISC_DIR)/TPower2.cpp \
	    $(SRC_TARGETMETRIC_MISC_DIR)/TScale.cpp \
	    $(SRC_TARGETMETRIC_MISC_DIR)/TSizeB1.cpp \
	    $(SRC_TARGETMETRIC_MISC_DIR)/TSizeNB1.cpp \
	    $(SRC_TARGETMETRIC_MISC_DIR)/TSum.cpp \
	    $(SRC_TARGETMETRIC_MISC_DIR)/TTau.cpp 

MSQ_HDRS += $(SRC_TARGETMETRIC_MISC_DIR)/InvTransBarrier.hpp \
	    $(SRC_TARGETMETRIC_MISC_DIR)/TOffset.hpp \
	    $(SRC_TARGETMETRIC_MISC_DIR)/TPower2.hpp \
	    $(SRC_TARGETMETRIC_MISC_DIR)/TScale.hpp \
	    $(SRC_TARGETMETRIC_MISC_DIR)/TSizeB1.hpp \
	    $(SRC_TARGETMETRIC_MISC_DIR)/TSizeNB1.hpp \
	    $(SRC_TARGETMETRIC_MISC_DIR)/TSum.hpp \
	    $(SRC_TARGETMETRIC_MISC_DIR)/TTau.hpp 
