SRC_TARGET_METRIC_RELATIVE_DIR = src/TargetMetric/Relative
MSQ_INCLUDES += -I$(top_srcdir)/$(SRC_TARGET_METRIC_RELATIVE_DIR)
INCLUDED_MAKEFILES += $(SRC_TARGET_METRIC_RELATIVE_DIR)/Makefile.am

MSQ_SRCS += \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TargetMetric2D.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/InvTransBarrier2D.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TSquared2D.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DOffset.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DScale.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShape.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeOrient.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeOrientAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeOrientBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeOrientBarrierAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeSize.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeSizeAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeSizeAlt2.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeSizeBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeSizeBarrierAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeSizeBarrierAlt2.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeSizeOrient.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeSizeOrientBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeSizeOrientBarrierAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DSize.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DSizeBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DSquared.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DSum.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DTau.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DUntangleAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DUntangleBeta.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DUntangleMu.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/InverseMeanRatio2D.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/InverseMeanRatio3D.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TargetMetric3D.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TSquared3D.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DOffset.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DScale.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShape.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeBarrierAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeOrient.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeOrientAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeOrientBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeOrientBarrierAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeSize.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeSizeBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeSizeBarrierAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeSizeBarrierAlt2.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeSizeBarrierAlt3.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeSizeOrient.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeSizeOrientBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeSizeOrientBarrierAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DSize.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DSizeBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DSquared.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DSum.cpp  \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DTau.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DUntangleAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DUntangleBeta.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DUntangleMu.cpp


MSQ_HDRS += \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/InvTransBarrier2D.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TSquared2D.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DOffset.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DScale.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShape.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeOrient.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeOrientAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeOrientBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeOrientBarrierAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeSize.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeSizeAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeSizeAlt2.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeSizeBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeSizeBarrierAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeSizeBarrierAlt2.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeSizeOrient.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeSizeOrientBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DShapeSizeOrientBarrierAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DSize.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DSizeBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DSquared.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DSum.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DTau.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DUntangleAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DUntangleBeta.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target2DUntangleMu.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TargetMetric2D.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/InverseMeanRatio2D.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/InverseMeanRatio3D.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TargetMetric3D.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TSquared3D.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DOffset.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DScale.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShape.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeBarrierAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeOrient.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeOrientAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeOrientBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeOrientBarrierAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeSize.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeSizeBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeSizeBarrierAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeSizeBarrierAlt2.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeSizeBarrierAlt3.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeSizeOrient.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeSizeOrientBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DShapeSizeOrientBarrierAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DSize.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DSizeBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DSquared.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DSum.hpp  \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DTau.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DUntangleAlt1.hpp  \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DUntangleBeta.hpp  \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/Target3DUntangleMu.hpp

