SRC_TARGET_METRIC_RELATIVE_DIR = src/TargetMetric/Relative
MSQ_INCLUDES += -I$(top_srcdir)/$(SRC_TARGET_METRIC_RELATIVE_DIR)
INCLUDED_MAKEFILES += $(SRC_TARGET_METRIC_RELATIVE_DIR)/Makefile.am

MSQ_SRCS += \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DMetric.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/InvTransBarrier2D.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TSquared2D.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DOffset.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DScale.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShape.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeOrient.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeOrientAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeOrientBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeOrientBarrierAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeSize.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeSizeAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeSizeAlt2.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeSizeBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeSizeBarrierAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeSizeBarrierAlt2.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeSizeOrient.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeSizeOrientBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeSizeOrientBarrierAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DSize.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DSizeBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DSquared.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DSum.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DTau.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DUntangleAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DUntangleBeta.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DUntangleMu.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/InverseMeanRatio2D.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/InverseMeanRatio3D.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DMetric.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TSquared3D.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DOffset.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DScale.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShape.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeBarrierAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeOrient.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeOrientAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeOrientBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeOrientBarrierAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeSize.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeSizeBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeSizeBarrierAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeSizeBarrierAlt2.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeSizeBarrierAlt3.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeSizeOrient.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeSizeOrientBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeSizeOrientBarrierAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DSize.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DSizeBarrier.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DSquared.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DSum.cpp  \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DTau.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DUntangleAlt1.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DUntangleBeta.cpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DUntangleMu.cpp


MSQ_HDRS += \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/InvTransBarrier2D.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TSquared2D.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DOffset.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DScale.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShape.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeOrient.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeOrientAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeOrientBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeOrientBarrierAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeSize.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeSizeAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeSizeAlt2.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeSizeBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeSizeBarrierAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeSizeBarrierAlt2.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeSizeOrient.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeSizeOrientBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DShapeSizeOrientBarrierAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DSize.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DSizeBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DSquared.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DSum.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DTau.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DUntangleAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DUntangleBeta.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DUntangleMu.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel2DMetric.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/InverseMeanRatio2D.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/InverseMeanRatio3D.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DMetric.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TSquared3D.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DOffset.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DScale.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShape.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeBarrierAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeOrient.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeOrientAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeOrientBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeOrientBarrierAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeSize.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeSizeBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeSizeBarrierAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeSizeBarrierAlt2.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeSizeBarrierAlt3.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeSizeOrient.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeSizeOrientBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DShapeSizeOrientBarrierAlt1.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DSize.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DSizeBarrier.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DSquared.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DSum.hpp  \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DTau.hpp \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DUntangleAlt1.hpp  \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DUntangleBeta.hpp  \
	$(SRC_TARGET_METRIC_RELATIVE_DIR)/TRel3DUntangleMu.hpp

