SRC_TARGETMETRIC_SHAPESIZE_DIR = src/TargetMetric/ShapeSize
MSQ_INCLUDES += -I$(top_srcdir)/$(SRC_TARGETMETRIC_SHAPESIZE_DIR)
INCLUDED_MAKEFILES += $(SRC_TARGETMETRIC_SHAPESIZE_DIR)/Makefile.am

MSQ_SRCS += $(SRC_TARGETMETRIC_SHAPESIZE_DIR)/ShapeSize/TShapeSize2DB2.cpp \
	    $(SRC_TARGETMETRIC_SHAPESIZE_DIR)/ShapeSize/TShapeSize2DNB1.cpp \
	    $(SRC_TARGETMETRIC_SHAPESIZE_DIR)/ShapeSize/TShapeSize2DNB2.cpp \
	    $(SRC_TARGETMETRIC_SHAPESIZE_DIR)/ShapeSize/TShapeSize3DB2.cpp \
	    $(SRC_TARGETMETRIC_SHAPESIZE_DIR)/ShapeSize/TShapeSizeB1.cpp \
	    $(SRC_TARGETMETRIC_SHAPESIZE_DIR)/ShapeSize/TShapeSizeB3.cpp \
	    $(SRC_TARGETMETRIC_SHAPESIZE_DIR)/ShapeSize/TShapeSizeNB3.cpp \
	    $(SRC_TARGETMETRIC_SHAPESIZE_DIR)/ShapeSize/TSquared.cpp 

MSQ_HDRS += $(SRC_TARGETMETRIC_SHAPESIZE_DIR)/ShapeSize/TShapeSize2DB2.hpp \
	    $(SRC_TARGETMETRIC_SHAPESIZE_DIR)/ShapeSize/TShapeSize2DNB1.hpp \
	    $(SRC_TARGETMETRIC_SHAPESIZE_DIR)/ShapeSize/TShapeSize2DNB2.hpp \
	    $(SRC_TARGETMETRIC_SHAPESIZE_DIR)/ShapeSize/TShapeSize3DB2.hpp \
	    $(SRC_TARGETMETRIC_SHAPESIZE_DIR)/ShapeSize/TShapeSizeB1.hpp \
	    $(SRC_TARGETMETRIC_SHAPESIZE_DIR)/ShapeSize/TShapeSizeB3.hpp \
	    $(SRC_TARGETMETRIC_SHAPESIZE_DIR)/ShapeSize/TShapeSizeNB3.hpp \
	    $(SRC_TARGETMETRIC_SHAPESIZE_DIR)/ShapeSize/TSquared.hpp 

